--- a/navbarr.html
+++ b/navbarr.html
@@ -9,13 +9,13 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.php">
-                <h1><img class="img-responsive" src="images/weblinenav.png" alt="logo"></h1>
+                <h1><img class="img-responsive" src="/webline/images/weblinenav.png" alt="logo"></h1>
             </a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="scroll active"><a href="#home">Inicio</a></li>
-                <li class="scroll"><a href="#services">Servicios</a></li>
+                <li class="scroll active"><a href="/webline/index.php#home">Inicio</a></li>
+                <li class="scroll"><a href="/webline/index.php#services">Servicios</a></li>
                 <li class="login_user"><a href="clientes/servicios.php">Clientes login</a></li>
             </ul>
         </div>
