--- a/navbarr.html
+++ b/navbarr.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.php">
+            <a class="navbar-brand" href="/webline/index.php">
                 <h1><img class="img-responsive" src="/webline/images/weblinenav.png" alt="logo"></h1>
             </a>
         </div>
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="scroll active"><a href="/webline/index.php#home">Inicio</a></li>
                 <li class="scroll"><a href="/webline/index.php#services">Servicios</a></li>
-                <li class="login_user"><a href="clientes/servicios.php">Clientes login</a></li>
+                <li class="login_user"><a href="/webline/clientes/servicios.php">Clientes login</a></li>
             </ul>
         </div>
     </div>
