--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-top wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
         <div class="container text-center">
             <div class="footer-logo">
-                <a href="index.php"><img class="img-responsive" src="images/185.png" alt=""></a>
+                <a href="/webline/index.php"><img class="img-responsive" src="/webline/images/185.png" alt=""></a>
             </div>
             <div class="social-icons">
                 <ul>
@@ -30,14 +30,14 @@
     </div>
 
 </footer>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/webline/js/jquery.js"></script>
+<script type="text/javascript" src="/webline/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="js/jquery.inview.min.js"></script>
-<script type="text/javascript" src="js/mousescroll.js"></script>
-<script type="text/javascript" src="js/smoothscroll.js"></script>
-<script type="text/javascript" src="js/jquery.countTo.js"></script>
-<script type="text/javascript" src="js/lightbox.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="/webline/js/jquery.inview.min.js"></script>
+<script type="text/javascript" src="/webline/js/mousescroll.js"></script>
+<script type="text/javascript" src="/webline/js/smoothscroll.js"></script>
+<script type="text/javascript" src="/webline//jquery.countTo.js"></script>
+<script type="text/javascript" src="/webline/js/lightbox.min.js"></script>
+<script type="text/javascript" src="/webline/js/main.js"></script>
 
 </html>
