--- a/navbarr.html
+++ b/navbarr.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Navegacion</span>
+                <span class="sr-only">Navegación</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="scroll active"><a href="/webline/index.php#home">Inicio</a></li>
                 <li class="scroll"><a href="/webline/index.php#services">Servicios</a></li>
-                <li class="login_user"><a href="/webline/clientes/servicios.php">Clientes login</a></li>
+                <li class="login_user"><a href="/webline/clientes/view/view_Servicios/servicios.php">Clientes login</a></li>
             </ul>
         </div>
     </div>
