--- a/header.html
+++ b/header.html
@@ -1,4 +1,5 @@
 <html>
+    <script data-ad-client="ca-pub-6946830713870299" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
